# FlorezCook

./: .dockerignore  .editorconfig  .env.example  .gcloudignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  DEPLOYMENT-INDUNNOVA.md  DEPLOYMENT-UNIFIED.md  DEPLOYMENT.md  DOCKER-README.md  Dockerfile  Dockerfile.cliente  FlorezZoho.txt  Makefile  Procfile  README.md  RESUMEN_FALLAS_SUPERADMINISTRADOR.txt  actualizar_bd.py  app-cliente.yaml  app-f1.yaml  app-indunnova.yaml  app.py  app.py.backup  app.py.old  app.yaml  app.yaml.backup  app.yaml.backup-20250606_200020  app.yaml.backup-20250617_141844  app.yaml.backup-20250617_161345  app.yaml.backup-20250707_202455  app_cliente.py  app_cliente.yaml  app_optimizado_20250606_195903.yaml  appengine_config.py  business_logic.py  check_pedido_productos_structure.py  cloudbuild.yaml  deploy-cliente.sh  deploy-f1.sh  (+43 more)
config/: __init__.py  database.py
docker/mysql/: init.sql
docker/nginx/: nginx.conf
docs/: migracion-postgresql.md
routes/: __init__.py  clientes.py  health.py  indicadores.py  pedidos.py  productos.py  reportes.py
static/: mobile.css
static/pedidos/css/: pedido_form.css
templates/: base.html  base_cliente.html  cliente_form.html  cliente_form_cliente.html  clientes.html  clientes_list.html  consolidado_productos.html  editar_pedido.html  importar_clientes.html  importar_productos.html  indicadores_dashboard.html  pedido_form.html  pedido_form_cliente.html  pedidos_consolidado.html  pedidos_lista.html  producto_form.html  productos.html  productos_list.html  reporte_pedidos.html  ver_cliente.html  ver_pedido.html  ver_producto.html
utils/: __init__.py  helpers.py  template_filters.py
