[metadata]
description-file = README.md

[flake8]
max-line-length = 88
exclude = .git,__pycache__,venv
per-file-ignores =
    # Ignorar E203 por incompatibilidad con black
    __init__.py: F401
    # Ignorar E203 por incompatibilidad con black
    # https://github.com/psf/black/issues/315
    # https://github.com/PyCQA/pycodestyle/issues/373
    __init__.py: E203

[isort]
line_length = 88
include_trailing_comma = true
multi_line_output = 3
known_first_party = app
sections = FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,THIRDPARTY,LOCALFOLDER

[tool:pytest]
testpaths = tests
python_files = test_*.py
python_classes = Test*
python_functions = test_*
addopts = -v -s --cov=app --cov-report=term-missing

[coverage:run]
source = app
branch = True
omit =
    */tests/*
    */__pycache__/*
    */migrations/*
    */venv/*

[coverage:report]
exclude_lines =
    pragma: no cover
    def __repr__
    raise NotImplementedError
    if __name__ == .__main__.:
    pass
    raise ImportError
